--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,9 @@
     "bootstrap-css-only": "^4.2.1",
     "mdbvue": "^5.1.0",
     "vue": "^2.5.21",
-    "vue-router": "^3.0.2"
+    "vue-nav-tabs": "^0.5.7",
+    "vue-router": "^3.0.2",
+    "vue-tabs-with-active-line": "^1.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
