--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.2.1",
+    "bootstrap-vue": "^2.0.0-rc.13",
     "mdbvue": "^5.1.0",
-    "vue": "^2.5.21",
+    "vue": "^2.6.7",
     "vue-nav-tabs": "^0.5.7",
     "vue-router": "^3.0.2",
     "vue-tabs-with-active-line": "^1.1.4"
