--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-css-only": "^4.2.1",
     "bootstrap-vue": "^2.0.0-rc.13",
